Apply fix for word wrapping very long words or numbers

--- a/app/assets/sass/_check-your-answers.scss
+++ b/app/assets/sass/_check-your-answers.scss
@@ -1,5 +1,10 @@
 .check-your-answers {
 
+  table.listing {
+    table-layout: fixed;
+    width: 100%;
+  }
+
   th {
     vertical-align: top;
     width: 25%;
@@ -8,7 +13,6 @@
 
   td {
     vertical-align: top;
-
     overflow-wrap: break-word;
     word-wrap: break-word;
   }
